syntax = "proto3";

package storage;

message Lookup {
    int64 id = 1;
    string name = 2;
}

message ListRequest {
    int64 domain_id = 1;
    int32 size = 2;
    int32 page = 3;
}

message DomainRecord {
    int64 domain_id = 1;
    int64 created_at = 2;
    int64 created_by = 3;
    int64 updated_at = 4;
    int64 updated_by = 5;

}

message ListForItemRequest {
    int64 domain_id = 1;
    int64 item_id = 2;
    int32 size = 3;
    int32 page = 4;
}

message ItemRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message Response {
    string status = 1;
}